# anti_uav_ws

./: .gitignore  .gitignore.orig  .gitmodules
anti_uav/: CMakeLists.txt  package.xml
anti_uav/cfg/: FleetCoordinator.cfg
anti_uav/launch/: autotest.launch  defense_sim2.launch  launch_models.launch  net_dynamics_test.launch  spawn_models.launch
anti_uav/msg/: InterceptResult.msg  PathCoeff.msg
anti_uav/param/: camera_to_body.yaml
anti_uav/src/: fleet_joy.cpp
anti_uav_ws/src/relative_nav/: CMakeLists.txt  package.xml
anti_uav_ws/src/relative_nav/include/relative_nav/: eigen.h  geometry.h  strings.h
anti_uav_ws/src/relative_nav/launch/: backend.launch  lean.launch  monte_carlo_ros.sh  multi_agent_sim_simple.launch  multi_mav.launch  naze.launch  naze_sim.launch  oa_test.launch  single_agent_simple.launch
anti_uav_ws/src/relative_nav/msg/: DesiredState.msg  FilterState.msg  GPS.msg  Line.msg  NodeInfo.msg  NodePath.msg  Obstacles.msg  Snapshot.msg  VOUpdate.msg  Voltage.msg
anti_uav_ws/src/relative_nav/param/: link.yaml  luigi.yaml  odroid_xbox.yaml  xtion_rgb.yaml
anti_uav_ws/src/relative_nav/scripts/: altitude_goal.py  desiredState.sh
anti_uav_ws/src/relative_nav/scripts/step/: plot_reference_trajectory.launch  ref.py  server_ref.py
anti_uav_ws/src/relative_nav/src/: eigen.cpp  simple_pid.cpp
anti_uav_ws/src/relative_nav/srv/: Transform.srv
misc/environment/: .bashrc  .myaliases  .rosalias
paper/: ICUAS17_counter_UAS.aux  ICUAS17_counter_UAS.dvi  ICUAS17_counter_UAS.tex  library.bib
paper/References/: .~lock.sky237-RefList.rtf#  CUAOPS.ris  ProNav.ris  library.bib  sky237-RefList.rtf  sources.bib
paper/figures/: models_screenshot
relative_nav/: Doxyfile
relative_nav/launch/: hex.launch  multi_agent_sim.launch  rgbd.launch  sim.launch  single_agent.launch  turtle.launch
relative_nav/msg/: Edge.msg  Goal.msg  Keyframe.msg  Path.msg  Point2D.msg  Waypoint.msg
relative_nav/param/: mario.yaml  xbox.yaml
relative_nav/rviz/: FPV_map.rviz
relative_nav/scripts/: desired.py  evart_gps.py  goal.py  goal.sh  rosbag_estimates.sh  rosbag_record.sh  rosbag_truth.sh  yaw_goal.py
ros_copter/: CMakeLists.txt
scripts/: autoTest  fixAllBags
(+182 files in other folders)
